# fit-rs

./: .dockerignore  .gitignore  CRUSH.md  Cargo.toml  DOCKER_README.md  Dockerfile  Dockerfile.htmx  HTMX_API.md  HTMX_README.md  README.md  build.rs  docker-compose.yml  ec50_model.stan  example_curl_test.sh  flake.nix  nginx.conf  parameters.json  parameters_uniform.json  test_server.py  test_simple.py  test_stan.rs
.crush/: crush.db  crush.db-shm  crush.db-wal  crush.json
ec50_output/: coefficients.csv  coefficients.json
examples/: precompile_stan.rs
src/: config.rs  htmx_server.rs  io.rs  lib.rs  main.rs  server.rs  stan_backend.rs  tui_plot.rs  visualization.rs
static/: example_data.csv  example_parameters.json
templates/: fit_results.html  index.html  parameter_form.html  plot_update.html
